--- a/components/x1zve926l-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/x1zve926l-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: x1zve926l-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-ae75ca0847.n2dw.p3.openshiftapps.com/rhtap/rhtap-qe:2b123d0dbc2f94ac2286be9fb572d6b684260da2@sha256:b363aa22b11ed33a20c818ad0d6bbc6e32dc07a484bd8cff82d558b97d588727
+          name: container-image
